test/compile-fail/resolution/type-existence/bound-is-not-trait/expected.txt
error: unresolved item `T`
 --> top.rhdl:1:8
  |
1 | fn a<T: T>() {}
  |         ^ no `T` item
